<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WekaWrapper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="change_file">Change File</string>
    <string name="ReadMemory">Module: Read Memory</string>
    <string name="ModuleInit">Module: Init</string>
    <string name="ModuleGetBuffer">Module: Get Buffer</string>

</resources>
