<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/something"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/btnChangeFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/something"
        android:layout_below="@+id/something"
        android:layout_marginTop="20dp"
        android:text="@string/change_file" />

    <Button
        android:id="@+id/btnModuleInit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnChangeFile"
        android:layout_alignRight="@+id/btnChangeFile"
        android:layout_below="@+id/btnChangeFile"
        android:layout_marginTop="14dp"
        android:text="@string/ModuleInit" />

    <Button
        android:id="@+id/btnModuleReadMemory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnModuleInit"
        android:layout_alignRight="@+id/btnModuleInit"
        android:layout_below="@+id/btnModuleInit"
        android:layout_marginTop="16dp"
        android:text="@string/ReadMemory" />

    <Button
        android:id="@+id/btnModuleGetBuffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnModuleReadMemory"
        android:layout_alignRight="@+id/btnModuleReadMemory"
        android:layout_below="@+id/btnModuleReadMemory"
        android:layout_marginTop="14dp"
        android:text="@string/ModuleGetBuffer" />
    
</RelativeLayout>
